--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="https://my.its.ac.id/" class="logo-image"></a>
-            <img src="https://my.its.ac.id/assets/media/img/myits-sso-white.png" alt="home" width="100px">
+            <img href="https://my.its.ac.id/" src="https://my.its.ac.id/assets/media/img/myits-sso-white.png" alt="home" width="100px">
         </div>
        <nav>
             <ul>
